--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@material/material-color-utilities": "^0.3.0",
     "rxjs": "~7.8.0",
     "tail-mat-ng": "file:",
     "tslib": "^2.3.0",
