--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "cypress:open": "cypress open"
   },
   "private": true,
   "dependencies": {
@@ -34,14 +35,18 @@
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "18.3.1",
     "autoprefixer": "^10.4.20",
+    "cypress": "^13.15.0",
     "eslint": "^9.9.1",
     "jasmine-core": "~5.1.0",
+    "jest": "^29.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "mocha": "^10.7.3",
     "postcss": "^8.4.47",
+    "selenium-webdriver": "^4.25.0",
     "tailwindcss": "^3.4.12",
     "typescript": "~5.4.2",
     "typescript-eslint": "8.2.0"
