--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@angular/cli": "^18.0.7",
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
-    "angular-eslint": "18.3.1",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.1.0",
     "jest": "^29.7.0",
@@ -47,7 +46,6 @@
     "postcss": "^8.4.47",
     "selenium-webdriver": "^4.25.0",
     "tailwindcss": "^3.4.12",
-    "typescript": "~5.4.2",
-    "typescript-eslint": "8.2.0"
+    "typescript": "~5.4.2"
   }
 }
