--- a/angular.json
+++ b/angular.json
@@ -120,11 +120,22 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
   },
   "cli": {
-    "schematicCollections": []
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
