--- a/package.json
+++ b/package.json
@@ -34,7 +34,13 @@
     "@angular/cli": "^18.0.7",
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "18.4.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "jasmine-core": "~5.1.0",
     "jest": "^29.7.0",
     "karma": "~6.4.0",
@@ -44,8 +50,10 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "mocha": "^10.7.3",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
     "selenium-webdriver": "^4.25.0",
     "tailwindcss": "^3.4.12",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "typescript-eslint": "8.10.0"
   }
 }
