--- a/.prettierrc
+++ b/.prettierrc
@@ -1,20 +1,20 @@
-{
-  "tabWidth": 2,
-  "useTabs": false,
-  "singleQuote": true,
-  "semi": true,
-  "bracketSpacing": true,
-  "arrowParens": "avoid",
-  "trailingComma": "es5",
-  "bracketSameLine": true,
-  "printWidth": 80,
-  "endOfLine": "auto",
-  "overrides": [
-    {
-      "files": "*.html",
-      "options": {
-        "parser": "angular"
-      }
-    }
-  ]
-}
+// {
+//   "tabWidth": 2,
+//   "useTabs": false,
+//   "singleQuote": true,
+//   "semi": true,
+//   "bracketSpacing": true,
+//   "arrowParens": "avoid",
+//   "trailingComma": "es5",
+//   "bracketSameLine": true,
+//   "printWidth": 80,
+//   "endOfLine": "auto",
+//   "overrides": [
+//     {
+//       "files": "*.html",
+//       "options": {
+//         "parser": "angular"
+//       }
+//     }
+//   ]
+// }
