--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@jsonforms/angular": "^3.5.1",
     "@material/material-color-utilities": "^0.3.0",
     "angular-svg-icon": "^18.0.2",
     "rxjs": "~7.8.0",
