--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@jsonforms/angular": "^3.5.1",
     "@material/material-color-utilities": "^0.3.0",
     "angular-svg-icon": "^18.0.2",
+    "material-symbols": "^0.28.1",
     "rxjs": "~7.8.0",
     "tail-mat-ng": "file:",
     "tslib": "^2.3.0",
